# Unet-Deep-Neural-Network-Implementation-C-

./: CMakeLists.txt  README.linux.md  README.md  TestModel.cpp  TrainModel.cpp  build.sh  data.cpp  header.h  models.cpp  source.cpp  test.sh  train.cpp  train.sh  utils.cpp
dataset/: About Acme AI.txt
models/: link-pre-built.txt
stat/: Eff_lr_0.0001.csv  Eff_lr_0.001.csv  Eff_lr_0.01.csv  Unet_lr_0.0001.csv  Unet_lr_0.001.csv  Unet_lr_0.01.csv
